# DiffCloth

./: .gitignore  .gitmodules  CMakeLists.txt
src/assets/meshes/my/: mesh2_target.txt  mesh3_target.txt  mesh4_target.txt
src/code/: main.cpp
src/code/engine/: Constants.h
src/code/optimization/: OptimizationTaskConfigurations.cpp  OptimizationTaskConfigurations.h  OptimizationTaskSetup.cpp
src/code/simulation/: Primitive.cpp  Primitive.h  Simulation.cpp  Simulation.h
